--- a/public/tuiter/css/explore.css
+++ b/public/tuiter/css/explore.css
@@ -3,7 +3,7 @@ body {
     font-family: "Helvetica Neue", "Arial";
 }
 
-.wd-page {
+.wd-explore-page {
     padding-top: 8px;
     padding-left: 16px;
     border: 1px solid rgb(47, 51, 54);
@@ -109,4 +109,15 @@ body {
     float: right;
     margin-left: 16px;
     border-radius: 20px;
+}
+
+.wd-trending-date {
+    padding-left: 7px;
+    font-size: 14px;
+    color: rgb(110, 118, 125);
+}
+
+.wd-trending-info {
+    display: flex;
+    flex-direction: row;
 }
