--- a/public/tuiter/css/bookmarks.css
+++ b/public/tuiter/css/bookmarks.css
@@ -7,6 +7,7 @@ body {
     padding-left: 16px;
     border: 1px solid rgb(47, 51, 54);
     border-bottom: 0px;
+    /*width: 584px;*/
 }
 
 .wd-bookmarks-title-container {
@@ -78,6 +79,7 @@ body {
 
 .wd-tuit-text {
     float: left;
+    width: 506px;
 }
 
 .wd-tuit-link {
