--- a/public/tuiter/css/explore.css
+++ b/public/tuiter/css/explore.css
@@ -1,116 +1,8 @@
 body {
-    background-color: black;
+    background-color: white;
     font-family: "Helvetica Neue", "Arial";
 }
 
-.wd-explore-page {
-    padding-top: 8px;
-    padding-left: 16px;
-    border: 1px solid rgb(47, 51, 54);
-    border-bottom: 0px;
-}
-
-.wd-search-bar-input {
-    color: white;
-    background-color: rgb(47, 51, 54);
-    border-radius: 25px;
-    width: 80%;
-    padding: 12px;
-    font-size: 18px;
-    box-shadow: none;
-    border: none;
-}
-
-.wd-gear {
-    float: right;
-    color: rgb(29,161,242);
-    font-size: 30px;
-    margin-right: 12px;
-    margin-top: 7px;
-}
-
-.wd-explore-links {
-    margin-top: 16px;
-    margin-bottom: 16px;
-    border-bottom: 1px solid transparent;
-}
-
-.wd-explore-link {
-    color: rgb(110, 118, 125);
-    font-size: 15px;
-    font-weight: bold;
-    text-decoration: none;
-    padding: 16px 32px 16px 0px;
-    /*  Weird padding to make the explore links line up with the search bar  */
-}
-
-.wd-selected-explore-link {
-    color: rgb(29,161,242);
-    border-bottom: 2px solid rgb(29,161,242);
-    border-radius: 1px;
-    margin: 0px 32px 0px 0px;
-    padding: 16px 0px;
-}
-
-.wd-break {
-    height: 13px;
-    background-color: rgb(33, 35, 39);
-    border-bottom: 1px solid rgb(47, 51, 54);
-    border-top: 3px solid rgb(47, 51, 54);
-    margin-left: -16px; /*  Override parent padding  */
-}
-
-/*------------------------------------------------------------------------------------------------*/
-
-.wd-explore-posts {
-    display: flex;
-    flex-direction: column;
-}
-
-.wd-explore-post {
-    padding: 16px;
-    margin-left: -16px;
-    border-bottom: 1px solid rgb(47, 51, 54);
-}
-
-.wd-trending-topic, .wd-trending-stats {
-    font-size: 13px;
-    color: rgb(110, 118, 125);
-    padding-bottom: 5px;
-}
-
-.wd-trending-title {
-    font-size: 15px;
-    color: white;
-    font-weight: bold;
-    padding-bottom: 5px;
-}
-
-.wd-post-text {
-    float: left;
-}
-
-.wd-trending-info {
-    display: flex;
-    flex-direction: row;
-}
-
-.wd-trending-author {
-    font-size: 13px;
-    color: white;
-    font-weight: bold;
-    padding-bottom: 5px;
-}
-
-.wd-trending-date {
-    font-size: 13px;
-    color: rgb(110, 118, 125);
-    padding-left: 7px;
-}
-
-.wd-post-image {
-    width: 100px;
-    height: 100px;
-    float: right;
-    border-radius: 20px;
+.wd-explore-text {
+    width: 90%;
 }
