--- a/src/components/tuiter/tuiter.css
+++ b/src/components/tuiter/tuiter.css
@@ -1,3 +1,12 @@
 .wd-explore-text {
     width: 90%;
 }
+
+.wd-tuit-image {
+    width: 48px;
+    height: 48px;
+}
+
+.wd-tuit {
+    width: 100%;
+}
