--- a/src/components/tuiter/tuiter.css
+++ b/src/components/tuiter/tuiter.css
@@ -2,11 +2,15 @@
     width: 90%;
 }
 
-.wd-tuit-image {
+.wd-avatar-image {
     width: 48px;
     height: 48px;
 }
 
 .wd-tuit {
     width: 100%;
+}
+
+.wd-border-radius-20px {
+    border-radius: 20px;
 }
